kubernetes/k3s-prod-a/workloads/freshrss/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`freshrss.l.47fc5c.com`)
      kind: Rule
      services:
        - name: freshrss
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: freshrss-certificate
